syntax = "proto3";

option java_multiple_files= true;
option java_package= "via.sep3.databaseserver.protobuff";

service Rides{
  rpc acceptPassenger(AcceptMessage) returns (ReservationMessage);
  rpc getAllReservationsToAccept(NullMessage) returns (ReservationsToAcceptCollection);
}

message AcceptMessage{
  int32 reservationId = 1;
  bool didAccept = 2;
}

message ReservationMessage{
  int32 rideId = 1;
  string name = 2;
  string phone = 3;
  bool didAccept = 4;
  //Maybe isAccepted?
}

message NullMessage{

}

message ReservationsToAcceptCollection{
  repeated ReservationMessage reservationMessages = 1;
}